force-app/main/default/objects/MeterReading__c/MeterReading__c.object-meta.xml
<CustomObject>
    <description>Equipment Meter Readings from eAutomate.</description>
    <label>MeterReading</label>
    <nameField>
        <label>MeterReading Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MeterReadings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>