force-app/main/default/objects/MeterReading__c/fields/Actual__c.field-meta.xml
<CustomField>
    <fullName>Actual__c</fullName>
    <description>Actual Meter Read</description>
    <inlineHelpText>Actual Meter Read</inlineHelpText>
    <label>Actual</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>