force-app/main/default/objects/MeterReading__c/fields/Avg_Monthly_Volume_3Mo__c.field-meta.xml
<CustomField>
    <fullName>Avg_Monthly_Volume_3Mo__c</fullName>
    <description>Avg Monthly Volume - 3 Month</description>
    <inlineHelpText>Avg Monthly Volume - 3 Month</inlineHelpText>
    <label>Avg Monthly Volume 3Mo</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>