force-app/main/default/objects/MeterReading__c/fields/BLK_Meter_Usage__c.field-meta.xml
<CustomField>
    <fullName>BLK_Meter_Usage__c</fullName>
    <formula>End_Meter_BLK__c -  Start_Meter_BLK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BLK Meter Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>