force-app/main/default/objects/MeterReading__c/fields/BW_Actual__c.field-meta.xml
<CustomField>
    <fullName>BW_Actual__c</fullName>
    <formula>IF(Meter_Type__c = &apos;B/W&apos;, Actual__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BW Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>