force-app/main/default/objects/MeterReading__c/fields/Color_Meter_Usage__c.field-meta.xml
<CustomField>
    <fullName>Color_Meter_Usage__c</fullName>
    <formula>End_Meter_Color__c -  Start_Meter_Color__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color Meter Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>