force-app/main/default/objects/MeterReading__c/fields/Discovery_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Date__c</fullName>
    <label>Discovery Date</label>
    <type>Date</type>
</CustomField>