force-app/main/default/objects/MeterReading__c/fields/EA_Meter_Reading_ID__c.field-meta.xml
<CustomField>
    <fullName>EA_Meter_Reading_ID__c</fullName>
    <label>EA Meter Reading ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>