force-app/main/default/objects/MeterReading__c/fields/End_A3_Life__c.field-meta.xml
<CustomField>
    <fullName>End_A3_Life__c</fullName>
    <label>End A3 Life</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>