force-app/main/default/objects/MeterReading__c/fields/End_Copy_BLK__c.field-meta.xml
<CustomField>
    <fullName>End_Copy_BLK__c</fullName>
    <label>End Copy BLK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>