force-app/main/default/objects/MeterReading__c/fields/End_Fax__c.field-meta.xml
<CustomField>
    <fullName>End_Fax__c</fullName>
    <label>End Fax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>