force-app/main/default/objects/MeterReading__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <referenceTo>TSGADX__Equipment__c</referenceTo>
    <relationshipLabel>MeterReadings</relationshipLabel>
    <relationshipName>MeterReadings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>