force-app/main/default/objects/MeterReading__c/fields/Is_Color__c.field-meta.xml
<CustomField>
    <fullName>Is_Color__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Color</label>
    <type>Checkbox</type>
</CustomField>