force-app/main/default/objects/MeterReading__c/fields/Is_Latest_1__c.field-meta.xml
<CustomField>
    <fullName>Is_Latest_1__c</fullName>
    <formula>Meter_Reading_Date__c = Equipment__r.Latest_Meter_Reading_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Latest</label>
    <type>Checkbox</type>
</CustomField>