force-app/main/default/objects/MeterReading__c/fields/Last_Seen_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Seen_Date__c</fullName>
    <label>Last Seen Date</label>
    <type>Date</type>
</CustomField>