force-app/main/default/objects/MeterReading__c/fields/Meter_Reading_Date__c.field-meta.xml
<CustomField>
    <fullName>Meter_Reading_Date__c</fullName>
    <label>Meter Reading Date</label>
    <type>Date</type>
</CustomField>