force-app/main/default/objects/MeterReading__c/fields/Meter_Source__c.field-meta.xml
<CustomField>
    <fullName>Meter_Source__c</fullName>
    <label>Meter Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>