force-app/main/default/objects/MeterReading__c/fields/Meter_Type__c.field-meta.xml
<CustomField>
    <fullName>Meter_Type__c</fullName>
    <label>Meter Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>