force-app/main/default/objects/MeterReading__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <formula>Equipment__r.TSGADX__Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model</label>
    <type>Text</type>
</CustomField>