force-app/main/default/objects/MeterReading__c/fields/Monitor_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Monitor_End_Date__c</fullName>
    <label>Monitor End Date</label>
    <type>Date</type>
</CustomField>