force-app/main/default/objects/MeterReading__c/fields/Monitor_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Start_Date__c</fullName>
    <label>Monitor Start Date</label>
    <type>Date</type>
</CustomField>