force-app/main/default/objects/MeterReading__c/fields/Page_Coverage_BLK__c.field-meta.xml
<CustomField>
    <fullName>Page_Coverage_BLK__c</fullName>
    <label>Page Coverage BLK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>