force-app/main/default/objects/MeterReading__c/fields/Page_Coverage_Cyan__c.field-meta.xml
<CustomField>
    <fullName>Page_Coverage_Cyan__c</fullName>
    <label>Page Coverage Cyan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>