force-app/main/default/objects/MeterReading__c/fields/Q1_Color_Meter__c.field-meta.xml
<CustomField>
    <fullName>Q1_Color_Meter__c</fullName>
    <formula>IF(
CONTAINS(&quot;Color&quot;,Meter_Type__c),
Q1_Meter__c ,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 Color Meter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>