force-app/main/default/objects/MeterReading__c/fields/Q2_BW_Meter__c.field-meta.xml
<CustomField>
    <fullName>Q2_BW_Meter__c</fullName>
    <formula>IF(
NOT(CONTAINS(&quot;Color&quot;,Meter_Type__c)),
Q2_Meter__c ,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 BW Meter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>