force-app/main/default/objects/MeterReading__c/fields/Q2_Meter__c.field-meta.xml
<CustomField>
    <fullName>Q2_Meter__c</fullName>
    <formula>IF(TODAY()- Meter_Reading_Date__c &gt;=90 &amp;&amp; TODAY()- Meter_Reading_Date__c &lt;=180,Actual__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 Meter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>