force-app/main/default/objects/MeterReading__c/fields/Q3_Color_Meter__c.field-meta.xml
<CustomField>
    <fullName>Q3_Color_Meter__c</fullName>
    <formula>IF(
CONTAINS(&quot;Color&quot;,Meter_Type__c),
Q3_Meter__c ,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 Color Meter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>