force-app/main/default/objects/MeterReading__c/fields/Q3_Meter__c.field-meta.xml
<CustomField>
    <fullName>Q3_Meter__c</fullName>
    <formula>IF(TODAY()- Meter_Reading_Date__c &gt;=180 &amp;&amp; TODAY()- Meter_Reading_Date__c &lt;=270,Actual__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 Meter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>