force-app/main/default/objects/MeterReading__c/fields/Start_Copy_Color__c.field-meta.xml
<CustomField>
    <fullName>Start_Copy_Color__c</fullName>
    <label>Start Copy Color</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>