force-app/main/default/objects/MeterReading__c/fields/Start_Meter_Life__c.field-meta.xml
<CustomField>
    <fullName>Start_Meter_Life__c</fullName>
    <label>Start Meter Life</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>