force-app/main/default/objects/MeterReading__c/fields/Start_Scan__c.field-meta.xml
<CustomField>
    <fullName>Start_Scan__c</fullName>
    <label>Start Scan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>