force-app/main/default/objects/MeterReading__c/fields/Toner_Level_BLK__c.field-meta.xml
<CustomField>
    <fullName>Toner_Level_BLK__c</fullName>
    <label>Toner Level BLK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>