force-app/main/default/objects/MeterReading__c/fields/Toner_Level_Magenta__c.field-meta.xml
<CustomField>
    <fullName>Toner_Level_Magenta__c</fullName>
    <label>Toner Level Magenta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>