force-app/main/default/objects/MeterReading__c/fields/X2017JanBW__c.field-meta.xml
<CustomField>
    <fullName>X2017JanBW__c</fullName>
    <formula>IF(
YEAR(Meter_Reading_Date__c) = 2017 &amp;&amp;
MONTH(Meter_Reading_Date__c) = 1 &amp;&amp;
 Meter_Type__c &lt;&gt; &apos;Color&apos; ,

Actual__c, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2017JanBW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>